footer 부분 주소+연락처 추가

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -71,7 +71,7 @@ header {
 section {
     position: relative;
     width: 100% !important;
-    height: 100vh !important;
+    min-height: 100vh !important;
 }
 
 .custom-h2 {
