--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -301,6 +301,7 @@ footer {
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+    display: none;
 }
 
 .about-popup-top {
@@ -390,6 +391,7 @@ footer {
     color: #46bdff;
     background-color: #fff;
 }
+
 .about-popup-top > span {
     position: absolute;
     top: 1.5rem;
