--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -230,7 +230,7 @@ section {
 }
 
 .contact-request input[type=submit] {
-    width: 360px;
+    width: 100%;
     height: 45px;
     border: solid 2px #ffffff;
     -webkit-border-radius: 0;
